chore: rename TranscriptionController
